--- a/DevelopEnvironment/DevelopEnvironment/appsettings.json
+++ b/DevelopEnvironment/DevelopEnvironment/appsettings.json
@@ -7,7 +7,7 @@
 
   "Headers": {
     "x-token": "",
-    "Content-Type": "application/json"
+    "Content-Type": "application/json",
     "x-service-name": "TradeBacktestApi"
   }
 }
