set indicator models

--- a/DevelopEnvironment/DevelopEnvironment/appsettings.json
+++ b/DevelopEnvironment/DevelopEnvironment/appsettings.json
@@ -1,12 +1,6 @@
 ﻿{
-  "Script": {
-    "Data": {
-      "Id": ""
-    }
-  },
-
   "Headers": {
-    "x-token": "",
+    "x-script-token": "",
     "Content-Type": "application/json",
     "x-service-name": "TradeBacktestApi"
   }
